# esp_bnn

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/BNN/: CMakeLists.txt  Conv2d.c  core.c  loadNet.c  utils.c
components/BNN/include/: common.h  config.h  conv.h  core.h  loadNet.h  net.h  utils.h
components/net/: CMakeLists.txt  resnet.h  resnet18.c
components/sd_card/: CMakeLists.txt  sd_mount.c  sd_mount.h
main/: CMakeLists.txt  Kconfig.projbuild  init_camera.c  init_camera.h  take_picture.c
